# bullet

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  convert.bat  eval.bat  grad.md  requirements.txt  run.py  rustfmt.toml  start.bat  wiki.md
backend/: Cargo.toml
backend/cuda/: Cargo.toml
backend/cuda/src/: blas.rs  buffer.rs  lib.rs
backend/shared/: Cargo.toml  build.rs
backend/shared/kernels/: activate.cu  include.cu  power_error.cu
backend/shared/kernels/sparse/: bwd.cu
backend/shared/src/: dense.rs  lib.rs  matmul.rs  operations.rs  sparse.rs
backend/shared/src/backend/: blas.rs  buffer.rs  conv.rs  ops.rs
backend/shared/src/dense/: activate.rs  adamw.rs  concat.rs  conv.rs  linear_comb.rs  matmul.rs  pairwise.rs  power_error.rs  slice.rs  softmax.rs  submatrix_product.rs
backend/shared/src/operations/: affine.rs  affine_dual.rs  gather.rs  reduce_across_batch.rs  select.rs  softmax_sparse.rs  submatrix_product.rs
backend/shared/src/sparse/: affine.rs  affine_dual.rs  gather.rs  mask.rs  select.rs  softmax.rs
backend/src/: lib.rs  operations.rs
backend/src/operations/: activate.rs  affine.rs  affine_dual.rs  concat.rs  conv.rs  gather.rs  linear.rs  linear_comb.rs  mask.rs  pairwise.rs  power_error.rs  reduce_across_batch.rs  select.rs  slice.rs  softmax.rs  softmax_sparse.rs  submatrix_product.rs
bullet-tensor/: Cargo.toml  build.rs
bullet-tensor/kernels/: backprops.cu  bufops.cu  reduce_add.cu  sparse_affine.cu  splat_add.cu  wrapper.h
bullet-tensor/src/: bindings.rs  buffer.rs  lib.rs  optimiser.rs  shape.rs  sparse.rs  tensor.rs  tensor_batch.rs  tests.rs  util.rs
bullet-tensor/tests/: activate.rs  linear.rs  multi-linear.rs  sparse_affine.rs
crates/acyclib/: Cargo.toml
crates/acyclib/examples/: depth.rs
crates/acyclib/src/: dag.rs  device.rs  format.rs  graph.rs  lib.rs  main.rs  manager.rs  topo.rs  trainer.rs
crates/acyclib/src/dag/: format.rs  manager.rs
crates/acyclib/src/device/: cpu.rs  function.rs  multi.rs  operation.rs  tensor.rs
crates/acyclib/src/graph/: builder.rs  format.rs  ir.rs  like.rs  multi.rs  node.rs  save.rs
crates/acyclib/src/manager/: error.rs
crates/acyclib/src/trainer/: dataloader.rs  optimiser.rs
crates/bullet_backend/: Cargo.toml
crates/bullet_backend/src/: lib.rs
crates/bullet_backend/src/operations/: activate.rs  affine.rs  affine_dual.rs  concat.rs  conv.rs  linear.rs  linear_comb.rs  power_error.rs  select.rs  slice.rs  softmax.rs  softmax_sparse.rs
crates/bullet_core/: Cargo.toml
crates/bullet_core/src/: backend.rs  cpu.rs  device.rs  function.rs  graph.rs  graph_ir.rs  lib.rs  matmul.rs  optimiser.rs  shape.rs  tensor.rs  trainer.rs
crates/bullet_core/src/backend/: activation.rs  buffer.rs  cpu.rs  device.rs  error.rs  shape.rs  tensor.rs
crates/bullet_core/src/cpu/: base.rs  blas.rs  cmp.rs  sparse.rs
crates/bullet_core/src/device/: base.rs  blas.rs  buffer.rs  core.rs  error.rs  sparse.rs
crates/bullet_core/src/function/: binary.rs  matmul.rs  sparse.rs  trinary.rs  unary.rs
crates/bullet_core/src/graph/: builder.rs  bwd.rs  error.rs  execution.rs  fwd.rs  instruction.rs  ir.rs  operation.rs  tensor.rs  tests.rs
crates/bullet_core/src/graph_ir/: fusion.rs
crates/bullet_core/src/optimiser/: adam.rs  adamw.rs  clip.rs  decay.rs  radam.rs  ranger.rs  utils.rs
crates/bullet_core/src/tensor/: dense.rs  matrix.rs  rng.rs  sparse.rs
crates/bullet_core/src/trainer/: dataloader.rs  logger.rs  schedule.rs
crates/bullet_cuda_backend/: Cargo.toml  build.rs
crates/bullet_cuda_backend/kernels/: activate.cu  geam.cu  optimiser.cu  pairwise.cu  power_error.cu  scalar.cu  select.cu  softmax.cu  sparse.cu  sparse_bwd.cu  sparse_fwd.cu  util.cu
crates/bullet_cuda_backend/src/: base.rs  blas.rs  buffer.rs  device.rs  kernel.rs  kernels.cu  lib.rs  main.rs  matmul.rs  multi.rs  ops.rs
crates/bullet_cuda_backend/src/device/: base.rs  blas.rs  buffer.rs  sparse.rs  sparse_bwd.rs  sparse_fwd.rs
crates/bullet_cuda_backend/src/kernel/: args.rs  expr.rs
crates/bullet_cuda_backend/src/ops/: qat.rs  sl.rs  sparse.rs  sparse_bwd.rs  sparse_fwd.rs
crates/bullet_hip_backend/: Cargo.toml  build.rs
crates/bullet_hip_backend/kernels/: activate.cu  include.cu  optimiser.cu  power_error.cu  select.cu  softmax.cu  util.cu
crates/bullet_hip_backend/kernels/base/: activate.cu  geam.cu  optimiser.cu  pairwise.cu  power_error.cu  scalar.cu  transpose.cu
crates/bullet_hip_backend/kernels/softmax/: masked.cu  naive.cu
crates/bullet_hip_backend/kernels/sparse/: bwd.cu  fwd.cu  mask.cu
crates/bullet_hip_backend/src/: backend.rs  dense.rs  lib.rs  matmul.rs  sparse.rs  tests.rs
crates/bullet_hip_backend/src/backend/: bindings.rs  blas.rs  buffer.rs  conv.rs  ops.rs  util.rs
crates/bullet_hip_backend/src/dense/: activate.rs  adamw.rs  conv.rs  linear_comb.rs  optimiser.rs  pairwise.rs  power_error.rs  slice.rs  softmax.rs  submatrix_product.rs
crates/bullet_hip_backend/src/sparse/: affine.rs  affine_dual.rs  gather.rs  mask.rs  select.rs  softmax.rs
crates/bullet_lib/: Cargo.toml  build.rs
crates/bullet_lib/src/: default.rs  frontend.rs  game.rs  lib.rs  nn.rs  policy.rs  shogi.rs  trainer.rs  value.rs
crates/bullet_utils/: Cargo.toml
crates/bullet_utils/src/: count_buckets.rs  graph.rs  main.rs  shuffle.rs  validate.rs  viribinpack.rs
crates/gpu/: Cargo.toml  build.rs
crates/gpu/src/: bindings.rs  buffer.rs  device.rs  function.rs  kernel.rs  lib.rs  operations.rs  pointwise.rs  runtime.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: backends.rs  device.rs  interpreter.rs  lib.rs
crates/trainer/: Cargo.toml
crates/trainer/src/: autograd.rs  lib.rs  model.rs  optimiser.rs  reader.rs  rng.rs  run.rs  runtime.rs
crates/utils/: Cargo.toml
crates/utils/src/: convert.rs  interleave.rs  montybinpack.rs  validate.rs
src/: lib.rs  (+22 more)
trainer/: Cargo.toml
trainer/src/: activation.rs  gradient.rs  lib.rs  main.rs  optimiser.rs  position.rs  rng.rs  scheduler.rs  trainer.rs
trainer/src/arch/: accumulator.rs  mod.rs  nnue.rs  quantise.rs
(+923 files in other folders)
