[workspace.package]
authors = ["Jamie Whiting"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jw1912/bullet"
rust-version = "1.87"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/bullet_lib",
    "crates/utils",
    "crates/compiler",
    "crates/trainer",
]

[workspace.dependencies]
bullet-compiler = { path = "crates/compiler", version = "0.1.0" }
bullet-trainer = { path = "crates/trainer", version = "0.1.0" }
bulletformat = "1.8.0"
montyformat = "0.9.2"
parking_lot = "0.12.4"
viriformat = "2.0.1"
