[workspace.package]
authors = ["Jamie Whiting"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jw1912/bullet"
rust-version = "1.87"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/bullet_lib",
    "crates/compiler",
    "crates/gpu",
    "crates/trainer",
    "crates/utils",
]

[workspace.dependencies]
bullet-compiler = { path = "crates/compiler", version = "0.1.0" }
bullet-trainer = { path = "crates/trainer", version = "0.1.0" }
