[package]
name = "bullet-tensor"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

[features]
cuda = ["bullet-cuda"]
blas = ["bullet-cpu/blas"]

[dependencies]
bullet-core = { path = "../bullet-core" }
bullet-cpu = { path = "../bullet-backends/cpu" }
bullet-cuda = { path = "../bullet-backends/cuda", optional = true }
