[package]
name = "trainer"
version = "0.1.0"
edition = "2021"
authors = ["Jamie Whiting"]

[dependencies]
bulletformat = { git = 'https://github.com/jw1912/bulletformat' }
common = { path = "../common" }
cpu = { path = "../cpu" }
cuda = { path = "../cuda", optional = true }

[features]
gpu = ["dep:cuda"]
simd = ["cpu/simd"]