[package]
name = "bullet_backend"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
bullet_core = { workspace = true }
bullet_hip_backend = { workspace = true }

[features]
cudnn = ["bullet_hip_backend/cudnn"]
hip = ["bullet_hip_backend/hip"]
gh-actions = ["bullet_hip_backend/gh-actions"]
