[package]
name = "bullet_core"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
rand = "0.9"
rand_distr = "0.5.1"

[[example]]
name = "compilation"
path = "../../examples/extra/compilation.rs"
