[package]
name = "bullet_cuda_backend"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
bullet_core = { workspace = true }
cudarc = { version = "=0.16.4", features = ["cuda-version-from-build-system"] }
