[package]
name = "bullet_cuda_backend"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[features]
error = []
nccl = ["cudarc/nccl"]

[dependencies]
acyclib = { workspace = true }
cudarc = { version = "0.17.3", features = ["cuda-version-from-build-system"] }
parking_lot = { workspace = true }