[package]
name = "bullet_hip_backend"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
bullet_core = { workspace = true }

[build-dependencies]
cc = "1.2.5"

[features]
hip = []
gh-actions = []

[[example]]
name = "mnist"
path = "../../examples/extra/mnist.rs"
