[package]
name = "bullet_lib"
version = "1.0.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
description = "Neural Network Trainer"

[dependencies]
bullet-compiler = { workspace = true }
bullet-trainer = { workspace = true }
bulletformat = { workspace = true }
montyformat = { workspace = true }
sfbinpack = "0.6.0"
viriformat = { workspace = true }

[[example]]
name = "simple"
path = "../../examples/simple.rs"

[[example]]
name = "test1"
path = "../../examples/tests/test1.rs"

[[example]]
name = "test2"
path = "../../examples/tests/test2.rs"

[[example]]
name = "test3"
path = "../../examples/tests/test3.rs"

[[example]]
name = "1_simple"
path = "../../examples/progression/1_simple.rs"

[[example]]
name = "2_output_buckets"
path = "../../examples/progression/2_output_buckets.rs"

[[example]]
name = "3_input_buckets"
path = "../../examples/progression/3_input_buckets.rs"

[[example]]
name = "4_multi_layer"
path = "../../examples/progression/4_multi_layer.rs"
