[package]
name = "bullet-gpu"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
description = "Compile and execute tensor DAGs on CUDA/ROCm devices"

[dependencies]
bullet-compiler = { workspace = true }

[features]
default = []
cuda = []
rocm = []
