[package]
name = "bullet-gpu"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
description = "Compile and execute tensor DAGs on CUDA/ROCm devices"

[dependencies]
bullet-compiler = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", optional = true }
objc2-metal = { version = "0.3.2", optional = true }
objc2-foundation = { version = "0.3.2", optional = true, default-features = false, features = ["std", "NSString", "NSError"] }
objc2-metal-performance-shaders = { version = "0.3.2", optional = true, default-features = false, features = ["MPSCore", "MPSCoreTypes", "MPSKernel", "MPSMatrix", "MPSMatrixMultiplication"] }

[features]
cuda = []
rocm = []
metal = ["dep:objc2-metal", "dep:objc2", "dep:objc2-foundation", "dep:objc2-metal-performance-shaders"]
