[package]
name = "bullet-runtime"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[features]
default = ["cuda", "hip"]
cuda = []
hip = []
