[package]
name = "bullet-trainer"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
bullet-compiler = { workspace = true }
bullet-gpu = { workspace = true }
rand_xoshiro = "=0.8.1"
rand_distr = "=0.6.0"

[features]
cuda = ["bullet-gpu/cuda"]
rocm = ["bullet-gpu/rocm"]
metal = ["bullet-gpu/metal"]

[[example]]
name = "ataxx"
path = "../../examples/ataxx.rs"

[[example]]
name = "test4"
path = "../../examples/tests/test4.rs"
