[package]
name = "bullet-utils"
version = "0.1.0"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.86"
bulletformat = "1.8.0"
montyformat = "0.9.2"
structopt = "0.3.26"
viriformat = "2.0.1"
